# smart-autocomplete

./: CMakeLists.txt  README.md
src/: Document.h  DocumentManager.h  Trie.cpp  Trie.h  TrieNode.h  a.out  benchmark  benchmark.cpp  searchengine.h  suggestion.h
